[package]
name = "akarui"
readme = "README.md"
description = "A lightweight screen backlight tool for linux"
repository = "https://github.com/elde-n/akarui"

version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "akarui"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
confy = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
